Fix several minor bugs
De-cram letter spacing of Funder names
Remove superfluous scrollbar on bios
Hide “Request Instructor Access” menu item when already confirmed
Recenter graphic in the Tutor quotes block
Changed how About Us headshot halos are done, so they work
cross-platform
Fixed Get This Title menu-flipping

--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -69,6 +69,7 @@
             .image {
                 order: 1;
                 background-image: url('/images/home/quotes/quote-right.jpg');
+                background-position: 62%;
             }
 
             > .quote {
